DIAC-446 Fix code smells in main